# FBI-MCP-Ignition

./: .env.example  .gitignore  README.md  pyproject.toml
.beads/: metadata.json
docs/: caldera-mcp-install.md  project-spec.md  whiskeyhouse-vscode-install.md
ignition-lint/: pyproject.toml
src/fbi_ignition_mcp/: __init__.py  caldera_proxy.py  schema_tools.py  server.py
tests/: test_server.py
whiskeyhouse-schema/: ignition-perspective-linter.py
